<resources>
    <string name="app_name">Volleyball Referee</string>
    <string name="rn_40200" translatable="false">
        The web services support is now officially over. All the remaining on-going subscriptions will be refunded.
        \n\n\Thank you for your support over the years.
    </string>
    <string name="discontinued_web_services" translatable="false">
        As if today, it is no longer possible to subscribe to web services.\n\nThis feature will be discontinued and removed entirely in the next few months, after every on-going subscription has expired.\n\nThe app development has been done on my spare time, and I cannot provide the kind of support or feature requests which some users expect from me.\n\nThank you for your patience,\nGuillaume
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="resume">Resume</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="reject">Discard</string>
    <string name="remove">Remove</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="undo">Undo</string>
    <string name="next">Next</string>
    <string name="volleyball_game">Indoor volleyball</string>
    <string name="home">Home</string>
    <string name="beach_volleyball_game">Beach Volleyball</string>
    <string name="snow_volleyball_game">Snow Volleyball</string>
    <string name="score_based_game">Scoreboard</string>
    <string name="resume_game_title">Resume match</string>
    <string name="resume_game_error">The match could not be resumed.</string>
    <string name="my_data_group">My data</string>
    <string name="configuration_group">Configuration</string>
    <string name="completed_games">Completed matches</string>
    <string name="available_games">Scheduled &amp; live matches</string>
    <string name="teams">Teams</string>
    <string name="rules">Rules</string>
    <string name="colleagues">Colleagues</string>
    <string name="live_games_vbr_com">All live matches on website</string>
    <string name="my_account">My account</string>
    <string name="user_sign_in">Sign in</string>
    <string name="user_password_update">Update my password</string>
    <string name="user_sign_out">Sign out</string>
    <string name="user_pseudo_hint">Referee pseudonym</string>
    <string name="user_current_password_hint">Current password</string>
    <string name="user_password_hint">Password</string>
    <string name="user_new_password_hint">New password</string>
    <string name="user_confirm_new_password_hint">Confirm new password</string>
    <string name="user_password_not_matching">Passwords don\'t match</string>
    <string name="user_password_error">Wrong password</string>
    <string name="user_locked_error">Subscription is expired or account is locked for 30 minutes after too many failed attempts to sign in</string>
    <string name="user_request_error">Error while processing request</string>
    <string name="user_signed_in_as_pseudo">Signed in as %s</string>
    <string name="password_strength">The password must contain at least 8 characters, including 1 uppercase character, 1 digit, and 1 special character</string>
    <string name="password_strength_error">Password does not satisfy the aforementioned criteria</string>
    <string name="user_signed_out">Signed out</string>
    <string name="search_colleague">Search in colleagues</string>
    <string name="add_colleague">Connect with a referee</string>
    <string name="received_colleague_request">You received a connection request from %s</string>
    <string name="sent_colleague_request">You sent a connection request to %s</string>
    <string name="pending">Pending</string>
    <string name="accept_colleague_question">Accept %s\'s request to connect?</string>
    <string name="reject_colleague_question">Discard %s\'s request to connect?</string>
    <string name="remove_colleague_question">Remove %s?</string>
    <string name="new_game_title">New game</string>
    <string name="home_team_tab">Home team</string>
    <string name="home_team_hint">Home team name</string>
    <string name="guest_team_tab">Guest team</string>
    <string name="guest_team_hint">Guest team name</string>
    <string name="select_players">Select the players</string>
    <string name="select_players_with_liberos">Select the players (including the liberos)</string>
    <string name="select_shirts_color">Select the shirts colour</string>
    <string name="select_captain">Select the captain</string>
    <string name="select_libero">Select the liberos (optional)</string>
    <string name="select_gender">Select the gender</string>
    <string name="input_player_names">Input the player names (optional)</string>
    <string name="confirm_game_setup_question">Do you confirm this setup?</string>
    <string name="gender_description">Gender</string>
    <string name="league_name">League / tournament name</string>
    <string name="division_name">Division / pool name</string>
    <string name="misc_tab">Misc.</string>
    <string name="rules_tab">Rules</string>
    <string name="teams_tab">Teams</string>
    <string name="referee">Referee</string>
    <string name="leave_game_setup_question">This match setup will be lost. Leave anyway?</string>
    <string name="must_provide_at_least_n_characters">You must provide at least %d characters</string>
    <string name="toss_tails">Tails</string>
    <string name="toss_heads">Heads</string>
    <string name="toss_coin">Toss a coin</string>
    <string name="swap_first_service">Swap first service</string>
    <string name="navigate_home">Back to home page</string>
    <string name="reset_set">Reset current set</string>
    <string name="reset_set_question">The current set will be restarted and every actions will be lost. Reset?</string>
    <string name="navigate_home_question">You may resume the current match later. Leave?</string>
    <string name="select_player_title">Select a player from the bench</string>
    <string name="court_position_tab">Positions</string>
    <string name="ladder_tab">Points</string>
    <string name="substitutions_tab">Substitutions</string>
    <string name="timeouts_tab">Timeouts</string>
    <string name="set_number">Set %d</string>
    <string name="set_duration">%d min</string>
    <string name="switch_sides">Switch court</string>
    <string name="won_game">%s won the match</string>
    <string name="timeout_title">Timeout (%s)</string>
    <string name="timeout_question">Call a timeout?</string>
    <string name="technical_timeout_title">Technical timeout</string>
    <string name="game_interval_title">Game interval</string>
    <string name="skip">Skip</string>
    <string name="run_background">Run in background</string>
    <string name="switch_sides_description">Manually switch court</string>
    <string name="remove_point_description">Remove last point</string>
    <string name="call_timeout_description">Call timeout</string>
    <string name="match_point">Match point</string>
    <string name="set_point">Set point</string>
    <string name="confirm_lineup_title">Starting line-up</string>
    <string name="confirm_team_lineup_question">Do you confirm this starting line-up for %s in this set?</string>
    <string name="no_substitution_message">No substitution available</string>
    <string name="confirm_set_question">Do you confirm this point?</string>
    <string name="all_timeouts_called">%s has no more available timeout</string>
    <string name="all_substitutions_used">%s has no more available substitution</string>
    <string name="one_remaining_substitution">%s has one remaining substitution</string>
    <string name="sanctions_tab">Sanctions</string>
    <string name="sanction">Sanction (%s)</string>
    <string name="delay_sanction">Delay</string>
    <string name="misconduct_sanction">Misconduct</string>
    <string name="yellow_card">Simple warning</string>
    <string name="red_card">A point and service to the opponent</string>
    <string name="red_card_expulsion">Expulsion for the remainder of the set</string>
    <string name="red_card_disqualification">Disqualification for the remainder of the match</string>
    <string name="coach_abbreviation">C.</string>
    <string name="set_lost_incomplete">%s lost the set because the team is incomplete</string>
    <string name="match_lost_incomplete">%s lost the match because the team is incomplete</string>
    <string name="position_1_title">I</string>
    <string name="position_2_title">II</string>
    <string name="position_3_title">III</string>
    <string name="position_4_title">IV</string>
    <string name="position_5_title">V</string>
    <string name="position_6_title">VI</string>
    <string name="substitution">Substitution</string>
    <string name="timeout">Timeout</string>
    <string name="delete_match">Delete the match</string>
    <string name="reschedule_match">Reschedule the match</string>
    <string name="edit_start_match">Edit and then start the match</string>
    <string name="start_match">Start the match</string>
    <string name="resume_match">Resume the match</string>
    <string name="download_match_error">Error while downloading the match</string>
    <string name="settings">Settings</string>
    <string name="pref_server_url" translatable="false">Server URL</string>
    <string name="pref_keep_screen_on">Keep the screen on during games</string>
    <string name="pref_night_mode">Theme</string>
    <string name="synchronize">Synchronize</string>
    <string name="sync_succeeded_message">Data synchronization succeeded</string>
    <string name="sync_failed_message">Data synchronization failed</string>
    <string name="search_games">Search games</string>
    <string name="delete_selected_games">Delete selected games</string>
    <string name="delete_game">Delete game</string>
    <string name="delete_selected_games_question">Do you want to delete the selected games?</string>
    <string name="delete_game_question">Do you want to delete this game?</string>
    <string name="deleted_game">Game was deleted</string>
    <string name="deleted_selected_games">All selected games were deleted</string>
    <string name="players">Players</string>
    <string name="create_score_sheet">Create score sheet</string>
    <string name="score_sheet_exception">Failed to create or to display the score sheet</string>
    <string name="signatures">Signatures</string>
    <string name="coach">Coach</string>
    <string name="captain">Captain</string>
    <string name="scorer">Scorer</string>
    <string name="name">Name</string>
    <string name="remarks">Remarks</string>
    <string name="search_teams">Search teams</string>
    <string name="delete_selected_teams">Delete selected teams</string>
    <string name="delete_team">Delete team</string>
    <string name="save_team">Save team</string>
    <string name="delete_selected_teams_question">Do you want to delete the selected teams?</string>
    <string name="delete_team_question">Do you want to delete this team?</string>
    <string name="deleted_team">Team was deleted</string>
    <string name="saved_team">Team was saved</string>
    <string name="deleted_teams">All selected teams were deleted</string>
    <string name="leave_team_creation_title">Leaving team creation</string>
    <string name="leave_team_creation_question">This team will not be saved. Leave anyway?</string>
    <string name="licence_referee_1">Licence referee 1</string>
    <string name="licence_referee_2">Licence referee 2</string>
    <string name="licence_scorer">Licence scorer</string>
    <string name="asistant_coach_home">Asistant Coach (Home)</string>
    <string name="asistant_coach_guest">Asistant Coach (Guest)</string>
    <string name="staff_home">Staff (Home)</string>
    <string name="staff_guest">Staff (Guest)</string>
</resources>